removed error white

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">{
+  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
   <div class = "img-responsive" style ="background-image: url(https://i.postimg.cc/ZnfW8Lp0/thumbnail-1.png)">
 
 	  
