edit existing file

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-1.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner"><img src="https://i.postimg.cc/CxRL6QRs/sT.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-sm ftco-animate">
     				<a href="#" class="partner"><img src="images/partner-2.png" class="img-fluid" alt="Colorlib Template"></a>
@@ -195,70 +195,52 @@ performed unit, sanity and regression testing on ATM machines.</p>
 and Oracle database.</p>
 		    				</div>
 	    				</div>
-					  <div id="page-3" class= "page three">
-					  	<h2 class="heading">Skills</h2>
-					  	<div class="row progress-circle mb-5">
-					  		<div class="col-lg-4 mb-4">
-						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">Python</h2>
+					  <section id="skills" class="section-alt">
+			<div class="container">
+				<div class="row">
+					<div class="col-full">
+						<h2 class="section-title">Technical Skills</h2>
+						<div class="centered line"></div>
+					</div>
+				</div>
 
-						        <!-- Progress bar 1 -->
-						        <div class="progress mx-auto" data-value='90'>
-						          <span class="progress-left">
-                        <span class="progress-bar border-primary"></span>
-						          </span>
-						          <span class="progress-right">
-                        <span class="progress-bar border-primary"></span>
-						          </span>
-						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
-						          </div>
-						        </div>
-						        <!-- END -->
+				<div class="row section-content">
+					<div class="skill-container">
+						<div class="col-full">
+							<div class="col-full text-center">I've worked with a wide variety of programming languages. For web applications I use PHP and Javascript. Whenever I need the most performance possible I obviously go with C++ and finally when I am building prototypes or working on my hobby projects I fall back on Python</div>
+						</div>
 
-
-						      </div>
-						    </div>
-
-
-
-						    <div class="col-lg-4 mb-4">
-						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">Java</h2>
-
-						        <!-- Progress bar 1 -->
-						        <div class="progress mx-auto" data-value='70'>
-						          <span class="progress-left">
-                        <span class="progress-bar border-primary"></span>
-						          </span>
-						          <span class="progress-right">
-                        <span class="progress-bar border-primary"></span>
-						          </span>
-						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">70<sup class="small">%</sup></div>
-						          </div>
-						        </div>
-						        <!-- END -->
-
-						      </div>
-						    </div>
-
-						    <div class="col-lg-4 mb-4">
-						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">JavaScript</h2>
-
-						        <!-- Progress bar 1 -->
-						        <div class="progress mx-auto" data-value='75'>
-						          <span class="progress-left">
-                        <span class="progress-bar border-primary"></span>
-						          </span>
-						          <span class="progress-right">
-                        <span class="progress-bar border-primary"></span>
-						          </span>
-						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
-						          </div>
-
+						<div class="col-1-5 skill">
+							<h4>JavaScript</h4>
+						</div>
+						<div class="col-1-5 skill">
+							<h4>Node.JS</h4>
+						</div>
+						<div class="col-1-5 skill">
+							<h4>PHP</h4>
+						</div>
+						<div class="col-1-5 skill">
+							<h4>Python</h4>
+						</div>
+						<div class="col-1-5 skill">
+							<h4>C++</h4>
+						</div>
+					</div>
+					<div class="col-full skill-container">
+						<h3>Most frequently used tools</h3>
+					</div>
+					<div class="col-2-3 col-wrap centered skill-container">
+						<div class="col-1-2">
+							<h4>Frameworks and Engines</h4>
+							<ul><li>Laravel</li><li>Vue.js</li><li>React</li><li>Electron</li><li>Unity Engine</li></ul>
+						</div>
+						<div class="col-1-2">
+							<h4>Software</h4>
+							<ul><li>Windows & Linux</li><li>Git</li><li>Docker</li><li>Kubernetes</li><li>MySQL</li></ul>						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		</div>
     </section>
