--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
           		<span class="subheading">Hey! I am</span>
-		  				<h1>Siddharth</h1>
-			  				<h2>I'm a 
+		  				<h1 style="color:red">Siddharth</h1>
+			  				<h2 style="color:red">I'm a 
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
