--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">{
+  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
   <div class = "img-responsive" style ="background-image: url(https://i.postimg.cc/ZnfW8Lp0/thumbnail-1.png)">
 
 	  
@@ -51,8 +51,8 @@
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
           		<span class="subheading">Hey! I am</span>
-		  				<h1>Siddharth</h1>
-			  				<h2>I'm a 
+		  				<h1 style="color:red;">Siddharth</h1>
+			  				<h2 style="color:red;">I'm a 
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
@@ -199,7 +199,10 @@ and Oracle database.</p>
 			<div class="container">
 				<div class="row">
 					<div class="col-full">
-						<h2 class="section-title">Technical Skills</h2>
+						<h2 class="section-title" style="
+						padding-left: 220px;
+						position: relative;
+				">Technical Skills</h2>
 						<div class="centered line"></div>
 					</div>
 				</div>
@@ -207,7 +210,9 @@ and Oracle database.</p>
 				<div class="row section-content">
 					<div class="skill-container">
 						<div class="col-full">
-							<div class="col-full text-center">I've worked with a wide variety of programming languages. For web applications I use PHP and Javascript. Whenever I need the most performance possible I obviously go with C++ and finally when I am building prototypes or working on my hobby projects I fall back on Python</div>
+							<div class="col-full text-center" style="
+							padding-bottom: 30px;
+					">I've worked with a wide variety of programming languages. For web applications I use PHP and Javascript. Whenever I need the most performance possible I obviously go with C++ and finally when I am building prototypes or working on my hobby projects I fall back on Python</div>
 						</div>
 
 						<div class="col-1-5 skill">
@@ -226,15 +231,30 @@ and Oracle database.</p>
 							<h4>C++</h4>
 						</div>
 					</div>
-					<div class="col-full skill-container">
+					<div class="col-full skill-container" style="
+					position: relative;
+					padding-left: 180px;
+					padding-top: 20px;
+			">
 						<h3>Most frequently used tools</h3>
 					</div>
-					<div class="col-2-3 col-wrap centered skill-container">
-						<div class="col-1-2">
-							<h4>Frameworks and Engines</h4>
+					<div class="col-2-3 col-wrap centered skill-container" style="
+					margin-top: 360px;
+					position: absolute;
+					/* padding-top: 200px; */
+					/* padding-left: 200px; */
+			">
+						<div class="col-1-2" style="
+						position: absolute;
+						padding-left: 140px;
+				">
+							<h4>Frameworks</h4>
 							<ul><li>Laravel</li><li>Vue.js</li><li>React</li><li>Electron</li><li>Unity Engine</li></ul>
 						</div>
-						<div class="col-1-2">
+						<div class="col-1-2" style="
+						position: absolute;
+						margin-left: 550px;
+				">
 							<h4>Software</h4>
 							<ul><li>Windows & Linux</li><li>Git</li><li>Docker</li><li>Kubernetes</li><li>MySQL</li></ul>						</div>
 					</div>
