edited existing file

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I have recently graduated from A software engineer with a Masters in Computer Science from Purdue School of Science.</p>
+		            <p>I have recently graduated from Purdue School of Science - IUPUI with a masters in Computer Science. I have worked as a security engineer and application Security engineer with a good understanding in cyber security and cryptography. I develop secure and robust applications mostly in Python and I am good with data structures and algorithms.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Siddharth Chittoor</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Indianapolis, Indiana, USA</span></li>
@@ -97,7 +97,7 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
 
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="https://drive.google.com/file/d/1aTxzYL8V_-Mg_vBY1Hy5b-PDP7vGI4ik/view?usp=sharing" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -109,10 +109,10 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="https://i.postimg.cc/CxRL6QRs/sT.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner"><img src="https://i.postimg.cc/dtvZFXQR/servicetitan.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-2.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner"><img src="https://i.postimg.cc/jdsHqBgQ/tata-consultancy-services-tcs-logo.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     		</div>
     	</div>
@@ -212,20 +212,20 @@ and Oracle database.</p>
 						<div class="col-full">
 							<div class="col-full text-center" style="
 							padding-bottom: 30px;
-					">I've worked with a wide variety of programming languages. For web applications I use PHP and Javascript. Whenever I need the most performance possible I obviously go with C++ and finally when I am building prototypes or working on my hobby projects I fall back on Python</div>
+					">I've worked with a wide variety of programming languages. For web based projects I have used JavaScript, Node.js for visualization, for a few projects I have used Java but mostly for the majority of my work I used Python. I have experience with languages such as C, C++, C# and CLisp.</div>
 						</div>
 
+						<div class="col-1-5 skill">
+							<h4>Python</h4>
+						</div>
+						<div class="col-1-5 skill">
+							<h4>Java</h4>
+						</div>
 						<div class="col-1-5 skill">
 							<h4>JavaScript</h4>
 						</div>
 						<div class="col-1-5 skill">
-							<h4>Node.JS</h4>
-						</div>
-						<div class="col-1-5 skill">
-							<h4>PHP</h4>
-						</div>
-						<div class="col-1-5 skill">
-							<h4>Python</h4>
+							<h4>C#</h4>
 						</div>
 						<div class="col-1-5 skill">
 							<h4>C++</h4>
@@ -248,15 +248,15 @@ and Oracle database.</p>
 						position: absolute;
 						padding-left: 140px;
 				">
-							<h4>Frameworks</h4>
-							<ul><li>Laravel</li><li>Vue.js</li><li>React</li><li>Electron</li><li>Unity Engine</li></ul>
+							<h4>Databases and Security</h4>
+							<ul><li>MySql</li><li>Oracle DB</li><li>MongoDB</li><li>Wireshark</li><li>Nmap</li></ul>
 						</div>
 						<div class="col-1-2" style="
 						position: absolute;
 						margin-left: 550px;
 				">
-							<h4>Software</h4>
-							<ul><li>Windows & Linux</li><li>Git</li><li>Docker</li><li>Kubernetes</li><li>MySQL</li></ul>						</div>
+							<h4>Software and others</h4>
+							<ul><li>Windows & Linux</li><li>Git</li><li>Docker</li><li>RESTful</li><li>.NET</li></ul>						</div>
 					</div>
 				</div>
 			</div>
@@ -274,13 +274,13 @@ and Oracle database.</p>
         </div>
     		<div class="row">
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+						<a href="https://github.com/SiddharthChittoor/Taxi-Price-Prediction.git" class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-analysis"></i>
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">Predictive Modelling</h3>
-								<p>Developed a predictive modelling for New York taxi fare price from point A to point B. The model is trained using complex models like Random Forest, XGBoost, LightGBM and others on pre-existing data</p>
+								<p>Developed a predictive model for New York taxi fare price from point A to point B. The model is trained using complex models like Random Forest, XGBoost, LightGBM and others on pre-existing data.</p>
 							</div>
 						</a>
 					</div>
@@ -310,18 +310,18 @@ insulin level using Bayesian model and neural net and suggested ways to improve 
 					</div>
 
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+						<a href="https://github.com/SiddharthChittoor/Fifa_Visualization.git" class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-innovation"></i>
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">FIFA data visualization</h3>
-								<p>Performed data visualization on large dataset of football players to show best stats of player from a club, strongest team in defending, passing and attacking, countries producing the best players among others .</p>
+								<p>Performed data visualization on large dataset of football players to show best stats of player from a club, strongest team in defending, passing and attacking, countries producing the best players among others.</p>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1 shadow">
+						<a href="https://github.com/SiddharthChittoor/Game-of-throne-GraphQL.git" class="services-1 shadow">
 							<span class="icon">
 								<i class="flaticon-ux-design"></i>
 							</span>
@@ -412,7 +412,7 @@ insulin level using Bayesian model and neural net and suggested ways to improve 
           		</div>
           		<div>
 	          		<h3 class="mb-4">LinkedIn</h3>
-		            <p><a href="#">www.linkedin.com/in/sid</a></p>
+		            <p><a href="www.linkedin.com/in/sidc">Siddharth Chittoor</a></p>
 	            </div>
 	          </div>
           </div>
