--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
           		<span class="subheading">Hey! I am</span>
-		  				<h1 style="color:red;">Siddharth</h1>
-			  				<h2 style="color:red;">I'm a 
+		  				<h1 style="color:DodgerBlue;">Siddharth</h1>
+			  				<h2 style="color:red;">I'm a
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
@@ -85,7 +85,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I have recently graduated from Purdue School of Science - IUPUI with a masters in Computer Science. I have worked as a security engineer and application Security engineer with a good understanding in cyber security and cryptography. I develop secure and robust applications mostly in Python and I am good with data structures and algorithms.</p>
+		            <p>Masters in Computer Science from Purdue School of Science - IUPUI. Have worked as a security engineer and an application security engineer with a good understanding in cyber security and cryptography. I help develop secure and robust applications mostly in Python with a good understanding in data structures and algorithms.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Siddharth Chittoor</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Indianapolis, Indiana, USA</span></li>
